# guide

./: README.md  mkdocs.yml  pyproject.toml
_includes/overrides/partials/: comments.html
docs/: diagram.md  draw.md  index.md  l_constraint.md  l_place.md  l_route.md  pick.md  review.md  s_circuit.md  s_pick.md  s_symbol.md  validation.md
site/: 404.html  index.html
site/search/: search_index.json
