[tool.poetry]
name = "eeguide"
version = "0.1.0"
description = "Electronics Design Guide"
authors = ["eeintech <eeintech@eeinte.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
